# rover

./: .gitignore  MINIPC_RUN.md  README.md  README_HARD_FIX_NOTES.txt  README_STAGE1.md  README_STAGE3_FIX.md  README_WORLD_CACHE_NOTE.txt  build_ros2.sh  clean_rebuild_world_safe.sh  reset_runtime.sh  run_gazebo_nav2.sh  run_gazebo_only.sh  test_square_motion.py
amr_stage4_cv_nav/: MINIPC_RUN.md  README_ARUCO_UPDATE.md  README_STAGE3.md  README_STAGE4.md  run_cmd_vel_smoke_test.sh  run_gazebo_autonomous.sh
amr_stage4_cv_nav/benchmark/: run_benchmark.py
amr_stage4_cv_nav/benchmark/results/: benchmark.csv  benchmark.md
amr_stage4_cv_nav/ros2_ws/src/kolestel_rover_description/: CMakeLists.txt  package.xml
amr_stage4_cv_nav/ros2_ws/src/kolestel_rover_description/config/: autonomous.rviz  cv_nav.rviz  nav2_params.yaml  nav2_params_lidar_plus_static.yaml
amr_stage4_cv_nav/ros2_ws/src/kolestel_rover_description/launch/: gazebo.launch.py  sim_autonomous.launch.py  sim_cv_nav.launch.py  sim_nav2.launch.py
amr_stage4_cv_nav/ros2_ws/src/kolestel_rover_description/maps/: warehouse_nav2_map.yaml
amr_stage4_cv_nav/ros2_ws/src/kolestel_rover_description/scripts/: aruco_node.py  cv_navigator.py  depth_cloud_republisher.py  dstar_lite_node.py  generate_nav2_map.py  global_costmap_node.py  grid_planner_node.py  lidar_map_republisher.py  line_follower_node.py  local_costmap_node.py  map_to_odom_publisher.py  path_follower_node.py  yolo_node.py
amr_stage4_cv_nav/ros2_ws/src/kolestel_rover_description/urdf/: kolestel_rover.urdf.xacro
amr_stage4_cv_nav/ros2_ws/src/kolestel_rover_description/worlds/: user_saved_layout.sdf
amr_stage4_cv_nav/shared/: aruco_world_poses.yaml  user_saved_layout.sdf
amr_stage4_cv_nav/web_app/app/: README.md
amr_stage4_cv_nav/web_app/app/backend/: pyproject.toml  requirements.txt  run_backend.sh
amr_stage4_cv_nav/web_app/app/backend/app/: __init__.py  config.py  db.py
amr_stage4_cv_nav/web_app/app/backend/app/routers/: robot.py  tasks.py  ws.py
amr_stage4_cv_nav/web_app/app/backend/app/services/: external_bridge.py  robot_state.py  simulator.py  warehouse_map.py
amr_stage4_cv_nav/web_app/app/backend/tests/: conftest.py  test_tasks.py
drawings/: all  general
raspberry_pi_5/: aruco_generate_markers.py  camera_conn.py  camera_conn_aruco.py  stick_to_line.py
ros2_ws/src/kolestel_robot/: CMakeLists.txt
ros2_ws/src/kolestel_robot/__MACOSX/kolestel_robot 2/: ._README.md
ros2_ws/src/kolestel_robot/__MACOSX/kolestel_robot 2/worlds/: ._obstacles.sdf
ros2_ws/src/kolestel_robot/config/: teleop_joy.yaml
ros2_ws/src/kolestel_robot/kolestel_robot 2/: README.md  package.xml
ros2_ws/src/kolestel_robot/kolestel_robot 2/config/: controllers.yaml  ros_gz_bridge.yaml
ros2_ws/src/kolestel_robot/kolestel_robot 2/launch/: navigation.launch.py  sim_sdf.launch.py
ros2_ws/src/kolestel_robot/kolestel_robot 2/maps/: map.yaml
ros2_ws/src/kolestel_robot/kolestel_robot 2/models/kolestel_robot/: model.config  model.sdf
ros2_ws/src/kolestel_robot/kolestel_robot 2/params/: slam_params.yaml
ros2_ws/src/kolestel_robot/kolestel_robot 2/rviz/: display.rviz  gazebo.rviz  navigation.rviz
ros2_ws/src/kolestel_robot/kolestel_robot 2/scripts/: teleop_keyboard.py
ros2_ws/src/kolestel_robot/kolestel_robot 2/urdf/: inertia_macros.xacro  robot.urdf.xacro  robot_gz.urdf.xacro  robot_properties.xacro  wheel.xacro
ros2_ws/src/kolestel_robot/launch/: display.launch.py  sim.launch.py  slam.launch.py  teleop.launch.py
ros2_ws/src/kolestel_robot/params/: nav2_params.yaml
ros2_ws/src/kolestel_robot/rviz/: sim.rviz
ros2_ws/src/kolestel_robot/scripts/: robot_controller.py
ros2_ws/src/kolestel_robot/urdf/: gz_plugins.xacro  sensors.xacro
ros2_ws/src/kolestel_robot/worlds/: empty.sdf  obstacles.sdf
ros2_ws/src/kolestel_rover_description/: CMakeLists.txt  package.xml
ros2_ws/src/kolestel_rover_description/config/: nav2_params.yaml  ros_gz_bridge.yaml
ros2_ws/src/kolestel_rover_description/launch/: gazebo.launch.py  nav2.launch.py  sim_nav2.launch.py
ros2_ws/src/kolestel_rover_description/maps/: warehouse_nav2_map.pgm
ros2_ws/src/kolestel_rover_description/models/aruco_marker_0/: model.config
ros2_ws/src/kolestel_rover_description/models/aruco_marker_1/: model.config
ros2_ws/src/kolestel_rover_description/models/aruco_marker_2/: model.config
ros2_ws/src/kolestel_rover_description/models/aruco_marker_3/: model.config
ros2_ws/src/kolestel_rover_description/models/aruco_marker_4/: model.config
ros2_ws/src/kolestel_rover_description/models/aruco_marker_5/: model.config
ros2_ws/src/kolestel_rover_description/onshape_export/: config.json
ros2_ws/src/kolestel_rover_description/onshape_export/assets/: part_1.part  part_1.stl  part_10.part  part_10.stl  part_11.part  part_12.part  part_12.stl  part_13.part  part_14.part  part_14.stl  part_15.part  part_15.stl  part_16.part  part_16.stl  part_17.part  part_17.stl  part_18.part  part_18.stl  part_19.part  part_19.stl  part_2.part  part_2.stl  part_20.part  part_21.part  part_21.stl  part_22.part  part_22.stl  part_23.part  part_23.stl  part_24.part  part_25.part  part_25.stl  part_26.part  part_27.part  part_27.stl  part_28.part  part_29.part  part_3.part  part_30.part  part_31.part  (+99 more)
ros2_ws/src/kolestel_rover_description/scripts/: odom_to_tf.py  warehouse_map_visualizer.py
ros2_ws/src/kolestel_rover_description/urdf/: kolestel_rover.urdf.xacro
ros2_ws/src/kolestel_rover_description/worlds/: warehouse.sdf
src/delivery_robot_line_follow/: package.xml  setup.cfg  setup.py
src/delivery_robot_line_follow/delivery_robot_line_follow/: line_follow_node.py  stick_to_line.py
src/delivery_robot_sim/: CMakeLists.txt  package.xml
src/delivery_robot_sim/config/: params.xacro
src/delivery_robot_sim/launch/: sim.launch.py
src/delivery_robot_sim/models/delivery_robot/: model.sdf
src/delivery_robot_sim/rviz/: robot.rviz
src/delivery_robot_sim/urdf/: plugins.xacro  robot.urdf.xacro
src/delivery_robot_sim/worlds/: forest.sdf  line_track.sdf
web_app/app/: .gitignore
web_app/app/pwa/: index.html  (+2 more)
(+30 files in other folders)
