<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delivery_robot_sim</name>
  <version>0.1.0</version>
  <description>Delivery robot simulation for ROS 2 Jazzy using Gazebo Sim (ros_gz) and RViz.</description>

  <maintainer email="rover@todo.todo">rover</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Launch uses get_package_share_directory -->
  <exec_depend>ament_index_python</exec_depend>

  <!-- Xacro for URDF generation -->
  <exec_depend>xacro</exec_depend>

  <!-- RViz + robot model -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- Gazebo Sim integration + bridge -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <!-- Messages for bridges -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>

  <!-- Teleop for testing -->
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
